force-app/main/default/objects/Counselling_Centre__c/Counselling_Centre__c.object-meta.xml
<CustomObject>
    <label>Centre*</label>
    <nameField>
        <displayFormat>CN{0000}</displayFormat>
        <label>Centre	No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Centre*</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>