force-app/main/default/objects/Counselling_Centre__c/fields/Counselling__c.field-meta.xml
<CustomField>
    <fullName>Counselling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counselling</label>
    <referenceTo>Counselling__c</referenceTo>
    <relationshipLabel>Centre*</relationshipLabel>
    <relationshipName>Centre</relationshipName>
    <type>Lookup</type>
</CustomField>